Make Projects Explicit
With organizations being the top level thing now we need to make this
implicitly spring into existence when a project is created.  Projects
are no longer implicitly created, and need to be invoked from a client.
Projects are also now namespace scoped (to the organization).
